# shape-challenge

./: .gitignore  README.md  constants.html  flows.html  index.html  logging.html  parsing.html  pyproject.toml  tasks.html  transform.html
.github/workflows/: docs.yaml  lint_python.yaml
analysis/: exploring.ipynb
reports/: shape_challenge_report.txt
sample_data/: equipment.json  equipment_sensors.csv
scripts/: run_original_data.py  run_sample.py
shape_challenge/: __init__.py  constants.py  flows.py  logging.py  parsing.py  tasks.py  transform.py
